# waka-readme

./: .env.template  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  DockerfileDev  LICENSE  Pipfile  README.md  action.yml  compose.yml  containerfile  docker-compose.yml  dockerfile  main.py  poetry.toml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  testing.yml
.github/workflows/: main.yml  testing.yml
tests/: __init__.py  sample_data.json  test_main.py
