####################
#     Metadata     #
####################

[project]
name = "waka-readme"
version = "0.3.0"
description = "Wakatime Weekly Metrics on your Profile Readme."
authors = [{ name = "Athul Cyriac Ajay", email = "athul8720@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["readme", "profile-page", "wakatime"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = ["faker>=19.13.0", "pygithub>=2.1.1", "requests>=2.31.0"]

[project.urls]
Homepage = "https://github.com/athul/waka-readme"
Documentation = "https://github.com/athul/waka-readme#readme"
Repository = "https://github.com/athul/waka-readme"
Changelog = "https://github.com/athul/waka-readme/commits/master"

#############################
#   Optional Dependencies   #
#############################

[project.optional-dependencies]
extra = ["loguru>=0.7.2", "python-dotenv>=1.0.0"]

#############################
# Development Dependencies  #
#############################

[tool.pdm.dev-dependencies]
tooling = ["bandit>=1.7.5", "black>=23.11.0", "ruff>=0.1.4", "pyright>=1.1.334"]

####################
#  Configurations  #
####################

[tool.bandit]
exclude_dirs = [".github", "tests", ".venv", ".vscode"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pyright]
exclude = ["**/__pycache__", ".venv/"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "W",
    "E",
    # mccabe
    # C90
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
]
line-length = 100
target-version = "py312"
extend-exclude = ["**/__pycache__"]

[tool.ruff.isort]
# case-sensitive = true
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.pydocstyle]
convention = "google"
